feat : handle new document link url in partners endpoints